bk_ida/gccida/c3/find_regno_note
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_regno_note/src/rtlanal.c:2266:33: error: must use 'enum' tag to refer to type 'reg_note'
rtx  find_regno_note( rtx insn, reg_note kind, unsigned int regno) 
                                ^
                                enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_regno_note/src/rtlanal.c:2280:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)insn[3].fld[0]; 
                      ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_regno_note/src/rtlanal.c:2303:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v8 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v12] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_regno_note/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_regno_note/src/obj/rtlanal.o] Error 1
